<resources>
    <string name="app_name">Explorea</string>
    <string name="login_text">Log In</string>
    <string name="logout_button">Sign Out</string>
    <string name="_WIP_send_request">Send request to server</string>
    <string name="request_error_response_msg">Error while connecting with server</string>
    <string name="no_network_connection">No internet connection</string>
    <string name="empty_creaded_route_msg">You do not create any routes</string>
    <string name="empty_favorite_route_msg">You do not have any favourite routes</string>
    <string name="search_track">Search track</string>
    <string name="create_track">Create track</string>
    <string name="mine_tracks">Mine tracks</string>
    <string name="favourite_track">Favourite tracks</string>
    <string name="create_road">CREATE ROAD</string>
    <string name="search_road">SEARCH ROAD</string>
    <string name="start">START!</string>
    <string name="default_sort">sortowanie domyślne</string>
    <string name="search">SEARCH</string>
    <string name="city">City</string>
    <string name="time_for_road">Time for road</string>
    <string name="mode_of_transportation">Mode of transportation</string>
    <string name="add_road">Add road</string>
    <string name="favourite_road">Favourite road</string>
    <string name="my_road">My road</string>
    <string name="select_points">Select points</string>
    <string name="order_points">Order points</string>
    <string name="routes_found">Routes found</string>
    <string name="welcome_to_explorea">Welcome to Explorea</string>
    <string name="rate">RATE</string>
    <string name="directions_null">Could not create directions for this route</string>
    <string name="distFootTooShort">Distance by foot is too short (%1), minimal is %2 meters</string>
    <string name="distFootTooLong">Distance by foot is too long (%1), maximal is %2 meters</string>
    <string name="distBikeTooShort">Distance by bike is too short (%1), maximal is %2 meters</string>
    <string name="distBikeTooLong">Distance by bike is too long (%1), maximal is %2 meters</string>
    <string name="pointCountTooSmall">Number of points in route is too small (%1), minimal is %2</string>
    <string name="pointCountTooBig">Number of points in route is too big (%1), maximal is %2</string>
    <string name="add_city_name">Add city name!</string>
    <string name="select_nav_mthd">Navigation method</string>
    <string name="nav_dialog_pos">Launch</string>
    <string name="nav_dialog_neg">Cancel</string>
</resources>
