<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartActivity">
    <item
        android:id="@+id/search_track_button"
        android:orderInCategory="100"
        android:title="@string/search_track"
        app:showAsAction="never"/>
    <item
        android:id="@+id/create_track_button"
        android:orderInCategory="100"
        android:title="@string/create_track"
        app:showAsAction="never"/>
    <item
        android:id="@+id/favourite_track_button"
        android:orderInCategory="100"
        android:title="@string/favourite_track"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mine_track_button"
        android:orderInCategory="100"
        android:title="@string/mine_tracks"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout_button"
        android:orderInCategory="100"
        android:title="@string/logout_button"
        app:showAsAction="never"/>
</menu>
