<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity4_settings_fragment1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/city"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_for_road"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/transport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/mode_of_transportation"
            android:lines="2"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">

        <EditText
            android:id="@+id/citySelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="2"/>

        <Spinner
            android:id="@+id/timeSpinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:textAlignment="textEnd"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/transportSpinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:spinnerMode="dropdown"
            android:textAlignment="textEnd"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ScrollView
            android:id="@+id/ScrollViewRoad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/RoadButtonList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:orientation="vertical">-->

<!--    <TextView-->
<!--        android:id="@+id/TextViewFillData"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:textAllCaps="true"-->
<!--        android:textColor="@android:color/black"-->
<!--        android:textSize="25sp"-->
<!--        android:text="@string/search_road"/>-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_weight="1"-->
<!--        android:orientation="horizontal">-->

<!--        <androidx.viewpager.widget.ViewPager-->
<!--            android:id="@+id/viewPager"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<!--            <androidx.viewpager.widget.PagerTabStrip-->
<!--                android:id="@+id/pager_header"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="top"-->
<!--                android:background="@color/colorPrimary"-->
<!--                android:padding="15sp"/>-->

<!--        </androidx.viewpager.widget.ViewPager>-->

<!--    </LinearLayout>-->

<!--</LinearLayout>-->